# data-event-ai-caseware

./: .gitignore  AI_USAGE.md  ARCHITECTURE_AWS.md  ARCHITECTURE_AWS_DIAGRAMS.md  CONVERSATION_TRANSCRIPT.md  CONVERSATION_TRANSCRIPT_FULL.md  EXECUTION_PLAN.md  README.md  REVIEW_CHECKLIST.md  docker-compose.yml
data-event-ai-caseware/: pom.xml
data-event-ai-caseware/src/main/java/com/caseware/: DataEventAiCasewareApplication.java
data-event-ai-caseware/src/main/java/com/caseware/client/: SearchClient.java
data-event-ai-caseware/src/main/java/com/caseware/config/: AppConfig.java
data-event-ai-caseware/src/main/java/com/caseware/controller/: IngestionController.java
data-event-ai-caseware/src/main/java/com/caseware/dto/: CasesDTO.java  Checkpoint.java  CustomerDTO.java  EventDTO.java  IngestionManifest.java  IngestionStatus.java
data-event-ai-caseware/src/main/java/com/caseware/exception/: FingerprintSchemaNotValidException.java
data-event-ai-caseware/src/main/java/com/caseware/model/: Cases.java  Customer.java
data-event-ai-caseware/src/main/java/com/caseware/repository/: CaseRepository.java  CustomerRepository.java
data-event-ai-caseware/src/main/java/com/caseware/service/: IngestionService.java
data-event-ai-caseware/src/main/java/com/caseware/util/: HashUtil.java  JsonUtil.java
data-event-ai-caseware/src/main/resources/: application.yaml  exampleMock.manifest
data-event-ai-caseware/src/test/resources/: application.yaml
data-event-ai-ranker/: .dockerignore  Dockerfile  main.py  pyproject.toml  test_main.py
db/: changes.sql  init.sql
(+9 files in other folders)
