[project]
name = "data-event-ai-ranker"
version = "0.1.0"
description = ""
authors = [
    {name = "Andres Perez",email = "andres96666@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "pydantic (>=2.0.0,<3.0.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0,<9.0.0"
httpx = ">=0.27.0,<1.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
